--- a/voll-mobile/package.json
+++ b/voll-mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
@@ -16,6 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
